--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Uncharted 4: A Thief's End </title>
     <link rel="shortcut icon" href="uncharted logo.jpeg" type="image/x-icon">
-    <link rel="stylesheet" href="style29.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
