--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Uncharted 4: A Thief's End </title>
-    <link rel="shortcut icon" href="uncharted-logo.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="uncharted logo.jpeg" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -68,7 +68,7 @@
                   <div class="card_container">
                 <a href="a" class="card_image_container">
                  <img 
-                 src="Uncharted 4.jpeg"
+                 src="Uncharted-4.jpeg"
                  alt="card 1 image"
                     class="card_image"
                     loading="lazy"
@@ -404,3 +404,4 @@
          </div>
 </body>
 </html>
+
